--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 				<button id="my_start">Start</button>
 				<button id="my_stop">Stop</button>
 			</div>
-			<div id="my_quagga"></div>
+			<div id="my_quagga">
+				<img src="senmu.png" alt="せんむ">
+			</div>
 			<div id="my_result">***</div>
 			<div id="my_barcode">
 				<div>***</div>
