--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<button id="my_stop">Stop</button>
 			</div>
 			<div id="my_quagga">
-				<img src="senmu.png" alt="せんむ">
+				<img id="quagga_placeholder" src="senmu.png" alt="せんむ">
 			</div>
 			<div id="my_result">***</div>
 			<div id="my_barcode">
